--- a/.vuepress/public/admin/config.yml
+++ b/.vuepress/public/admin/config.yml
@@ -1,6 +1,5 @@
 backend:
-  name: github
-  repo: nagi1/ahmednagi.com
+  name: git-gateway
   branch: master
   
 media_folder: ".vuepress/public/uploads"
