--- a/.vuepress/public/admin/config.yml
+++ b/.vuepress/public/admin/config.yml
@@ -7,8 +7,8 @@ public_folder: ".vuepress/dist/assets/img"
 
 
 collections:
-  - name: "post"
-    label: "Post"
+  - name: "article"
+    label: "Article"
     folder: "articles"
     create: true
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
