fix tailwind PurgCss

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "vuepress-plugin-seo": "^0.1.2"
   },
   "dependencies": {
+    "@silvanite/vuepress-plugin-tailwind": "^1.2.0",
     "vue-cookies": "^1.7.0"
   }
 }
