--- a/.vuepress/public/admin/config.yml
+++ b/.vuepress/public/admin/config.yml
@@ -11,13 +11,14 @@ collections:
     label_singular: 'Article'
     folder: 'articles'
     create: true
-    path: '{{year}}{{month}}{{day}} {{slug}}'
+    path: '{{year}}{{month}}{{day}} {{slug}}/index'
     media_folder: ''
     fields:
+      - { label: 'Title', name: 'title', widget: 'string', default: '{{slug}}' }
       - { label: 'Link', name: 'permalink', widget: 'string' }
       - { label: 'Sub Title', name: 'subtitle', widget: 'string' }
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
       - { label: 'Featured Image', name: 'image', widget: 'image' }
       - { label: 'Short Description', name: 'description', widget: 'string' }
-      - { label: 'Tags', name: 'tags', widget: 'list' }
+      - { label: 'Tags', name: 'tags', widget: 'list', default: ['news'], allow_add: true }
       - { label: 'Body', name: 'body', widget: 'markdown' }
