--- a/.vuepress/public/admin/config.yml
+++ b/.vuepress/public/admin/config.yml
@@ -16,8 +16,8 @@ collections:
     fields:
       - { label: 'Title', name: 'title', widget: 'string', default: '{{slug}}' }
       - { label: 'Link', name: 'permalink', widget: 'string' }
-      - { label: 'Sub Title', name: 'subtitle', widget: 'string' }
-      - { label: 'Publish Date', name: 'date', widget: 'datetime' }
+      - { label: 'Sub Title', name: 'subtitle', widget: 'string', required: false }
+      - { label: 'Publish Date', name: 'date', widget: 'datetime', required: false }
       - { label: 'Featured Image', name: 'image', widget: 'image' }
       - { label: 'Short Description', name: 'description', widget: 'string' }
       - { label: 'Tags', name: 'tags', widget: 'list', default: ['news'], allow_add: true }
