--- a/.vuepress/public/admin/config.yml
+++ b/.vuepress/public/admin/config.yml
@@ -13,12 +13,31 @@ collections:
     create: true
     path: '{{year}}{{month}}{{day}} {{slug}}/index'
     media_folder: ''
+    public_folder: '.vuepress/dist/assets/img'
     fields:
-      - { label: 'Title', name: 'title', widget: 'string', default: '{{slug}}' }
+      - label: 'Title'
+        name: 'title'
+        widget: 'string'
+
+      - label: 'Featured Image'
+        name: 'image'
+        widget: 'image'
+        allow_multiple: false
+        media_library:
+          config:
+            multiple: true
+
       - { label: 'Link', name: 'permalink', widget: 'string' }
       - { label: 'Sub Title', name: 'subtitle', widget: 'string', required: false }
-      - { label: 'Publish Date', name: 'date', widget: 'datetime', required: false }
-      - { label: 'Featured Image', name: 'image', widget: 'image' }
+      - {
+          label: 'Publish Date',
+          name: 'date',
+          widget: 'datetime',
+          dateFormat: 'YYYY-MM-DD',
+          timeFormat: 'HH:mm A',
+          format: 'YYYY-MM-DD HH:mm A',
+          required: false,
+        }
       - { label: 'Short Description', name: 'description', widget: 'string' }
       - { label: 'Tags', name: 'tags', widget: 'list', default: ['news'], allow_add: true }
       - { label: 'Body', name: 'body', widget: 'markdown' }
