--- a/.vuepress/public/admin/config.yml
+++ b/.vuepress/public/admin/config.yml
@@ -13,7 +13,7 @@ collections:
     label_singular: 'Article'
     folder: 'articles'
     create: true
-    path: '{{year}}{{month}}{{day}} {{slug}}/index'
+    path: '{{year}}{{month}}{{day}}-{{slug}}/index'
     media_folder: ''
     public_folder: '.vuepress/dist/assets/img'
     fields:
