fix image media lib in config.yaml

--- a/.vuepress/public/admin/config.yml
+++ b/.vuepress/public/admin/config.yml
@@ -14,8 +14,11 @@ collections:
     folder: 'articles'
     create: true
     path: '{{year}}{{month}}{{day}}-{{slug}}/index'
+    # media_folder: '.vuepress/public/uploads'
+    # public_folder: '.vuepress/dist/assets/img'
     media_folder: ''
-    public_folder: '.vuepress/dist/assets/img'
+    public_folder: ''
+
     fields:
       - label: 'Title'
         name: 'title'
