--- a/.vuepress/public/admin/config.yml
+++ b/.vuepress/public/admin/config.yml
@@ -38,6 +38,9 @@ collections:
           label: 'Publish Date',
           name: 'date',
           widget: 'datetime',
+          dateFormat: 'YYYY-MM-DD',
+          timeFormat: 'HH:mm A',
+          format: 'YYYY-MM-DD HH:mm',
           required: false,
         }
       - { label: 'Short Description', name: 'description', widget: 'string' }
