--- a/.vuepress/public/admin/config.yml
+++ b/.vuepress/public/admin/config.yml
@@ -108,3 +108,38 @@ collections:
         }
       - { label: 'Short Description', name: 'description', widget: 'string' }
       - { label: 'Body', name: 'body', widget: 'markdown' }
+
+
+  - name: 'issues'
+    label: 'Issues'
+    label_singular: 'Issue'
+    folder: 'issues'
+    create: true
+    media_folder: ../../.vuepress/public/uploads
+    public_folder: /uploads
+    path: '{{year}}{{month}}{{day}}-{{slug}}/index'
+    fields:
+      - label: 'Title'
+        name: 'title'
+        widget: 'string'
+
+      - label: 'Featured Image'
+        name: 'image'
+        widget: 'image'
+        allow_multiple: false
+        media_folder: ../../.vuepress/public/covers
+        public_folder: /covers
+
+      - { label: 'Link', name: 'permalink', widget: 'string', default: 'issue/' }
+      - { label: 'Sub Title', name: 'subtitle', widget: 'string', required: false }
+      - {
+          label: 'Publish Date',
+          name: 'date',
+          widget: 'datetime',
+          dateFormat: 'YYYY-MM-DD',
+          timeFormat: 'HH:mm A',
+          format: 'YYYY-MM-DD HH:mm',
+          required: false,
+        }
+      - { label: 'Tags', name: 'tags', widget: 'list', default: ['issue'], allow_add: true }
+      - { label: 'Body', name: 'body', widget: 'markdown' }
