Fix tailwindcss and purgecess options

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 		"vuepress-plugin-seo": "^0.1.2"
 	},
 	"dependencies": {
-		"@silvanite/vuepress-plugin-tailwind": "https://github.com/nagi1/vuepress-plugin-tailwind#dist",
+		"@silvanite/vuepress-plugin-tailwind": "^1.3.0",
 		"purgecss-whitelister": "^2.4.0",
 		"vue-cookies": "^1.7.0"
 	}
