--- a/.vuepress/public/admin/config.yml
+++ b/.vuepress/public/admin/config.yml
@@ -32,15 +32,7 @@ collections:
 
       - { label: 'Link', name: 'permalink', widget: 'string' }
       - { label: 'Sub Title', name: 'subtitle', widget: 'string', required: false }
-      - {
-          label: 'Publish Date',
-          name: 'date',
-          widget: 'datetime',
-          dateFormat: 'YYYY-MM-DD',
-          timeFormat: 'HH:mm A',
-          format: 'YYYY-MM-DD HH:mm',
-          required: false,
-        }
+      - { label: 'Publish Date', name: 'date', widget: 'datetime', dateFormat: 'YYYY-MM-DD', timeFormat: 'HH:mm A', format: 'YYYY-MM-DD HH:mm', required: false }
       - { label: 'Short Description', name: 'description', widget: 'string' }
       - { label: 'Tags', name: 'tags', widget: 'list', default: ['news'], allow_add: true }
       - { label: 'Body', name: 'body', widget: 'markdown' }
@@ -68,15 +60,7 @@ collections:
 
       - { label: 'Link', name: 'permalink', widget: 'string', default: 'ar/' }
       - { label: 'Sub Title', name: 'subtitle', widget: 'string', required: false }
-      - {
-          label: 'Publish Date',
-          name: 'date',
-          widget: 'datetime',
-          dateFormat: 'YYYY-MM-DD',
-          timeFormat: 'HH:mm A',
-          format: 'YYYY-MM-DD HH:mm',
-          required: false,
-        }
+      - { label: 'Publish Date', name: 'date', widget: 'datetime', dateFormat: 'YYYY-MM-DD', timeFormat: 'HH:mm A', format: 'YYYY-MM-DD HH:mm', required: false }
       - { label: 'Short Description', name: 'description', widget: 'string' }
       - { label: 'Tags', name: 'tags', widget: 'list', default: ['news'], allow_add: true }
       - { label: 'Body', name: 'body', widget: 'markdown' }
@@ -96,22 +80,14 @@ collections:
 
       - { label: 'Link', name: 'permalink', widget: 'string' }
       - { label: 'Sub Title', name: 'subtitle', widget: 'string', required: false }
-      - {
-          label: 'Publish Date',
-          name: 'date',
-          widget: 'datetime',
-          dateFormat: 'YYYY-MM-DD',
-          timeFormat: 'HH:mm A',
-          format: 'YYYY-MM-DD HH:mm',
-          required: false,
-        }
+      - { label: 'Publish Date', name: 'date', widget: 'datetime', dateFormat: 'YYYY-MM-DD', timeFormat: 'HH:mm A', format: 'YYYY-MM-DD HH:mm', required: false }
       - { label: 'Short Description', name: 'description', widget: 'string' }
       - { label: 'Body', name: 'body', widget: 'markdown' }
 
-  - name: 'issues'
-    label: 'Issues'
-    label_singular: 'Issue'
-    folder: 'issues'
+  - name: 'snippets'
+    label: 'Snippets'
+    label_singular: 'Snippet'
+    folder: 'snippet'
     create: true
     media_folder: /.vuepress/public/uploads
     public_folder: /uploads
@@ -129,16 +105,8 @@ collections:
         public_folder: /covers
         required: false
 
-      - { label: 'Layout', name: 'layout', widget: 'hidden', default: 'issue' }
-      - { label: 'Link', name: 'permalink', widget: 'string', default: 'issue/' }
-      - {
-          label: 'Publish Date',
-          name: 'date',
-          widget: 'datetime',
-          dateFormat: 'YYYY-MM-DD',
-          timeFormat: 'HH:mm A',
-          format: 'YYYY-MM-DD HH:mm',
-          required: false,
-        }
-      - { label: 'Tags', name: 'tags', widget: 'list', default: ['issue'], allow_add: true }
+      - { label: 'Layout', name: 'layout', widget: 'hidden', default: 'snippet' }
+      - { label: 'Link', name: 'permalink', widget: 'string', default: 'snippets/' }
+      - { label: 'Publish Date', name: 'date', widget: 'datetime', dateFormat: 'YYYY-MM-DD', timeFormat: 'HH:mm A', format: 'YYYY-MM-DD HH:mm', required: false }
+      - { label: 'Tags', name: 'tags', widget: 'list', default: ['snippet'], allow_add: true }
       - { label: 'Body', name: 'body', widget: 'markdown' }
