--- a/package.json
+++ b/package.json
@@ -16,28 +16,34 @@
 		"blog"
 	],
 	"scripts": {
-		"watch": "npm run dev",
 		"dev": "vuepress dev",
 		"build": "vuepress build",
 		"local-admin": "npx netlify-cms-proxy-server"
 	},
 	"devDependencies": {
-		"@vue/babel-preset-app": "^4.2.2",
-		"@vuepress/plugin-blog": "^1.9.2",
-		"@vuepress/plugin-google-analytics": "^1.3.0",
-		"autoprefixer": "^9.7.4",
+		"@vue/babel-preset-app": "^4.5.11",
+		"@vuepress/plugin-blog": "^1.9.4",
+		"@vuepress/plugin-google-analytics": "^1.8.0",
+		"@vuepress/plugin-pwa": "^1.8.0",
+		"autoprefixer": "9.0.0",
+		"image-minimizer-webpack-plugin": "1.0.0",
+		"imagemin-gifsicle": "^7.0.0",
+		"imagemin-jpegtran": "^7.0.0",
+		"imagemin-optipng": "^8.0.0",
+		"imagemin-svgo": "^8.0.0",
 		"moment": "^2.24.0",
+		"postcss": "^8.2.4",
 		"svg-inline-loader": "^0.8.0",
-		"tailwindcss": "^1.2.0",
+		"svg-url-loader": "^7.1.1",
+		"tailwindcss": "^2.0.2",
 		"tailwindcss-dir": "^4.0.0",
 		"tailwindcss-plugins": "^0.3.0",
-		"vuepress": "^1.3.0",
+		"vuepress": "^1.8.0",
 		"vuepress-plugin-disqus": "^0.2.0",
-		"vuepress-plugin-seo": "^0.1.2"
+		"vuepress-plugin-seo": "^0.1.2",
+		"webpack-cli": "^4.5.0"
 	},
 	"dependencies": {
-		"@silvanite/vuepress-plugin-tailwind": "^1.3.0",
-		"purgecss-whitelister": "^2.4.0",
 		"vue-cookies": "^1.7.0"
 	}
 }
