--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"imagemin-jpegtran": "^7.0.0",
 		"imagemin-optipng": "^8.0.0",
 		"imagemin-svgo": "^8.0.0",
+		"img-optimize-loader": "^1.0.7",
 		"moment": "^2.24.0",
 		"postcss": "^8.2.4",
 		"svg-inline-loader": "^0.8.0",
