--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"tailwindcss-plugins": "^0.3.0",
 		"vuepress": "^1.8.0",
 		"vuepress-plugin-disqus": "^0.2.0",
+		"vuepress-plugin-google-gtag": "^1.0.1",
 		"vuepress-plugin-seo": "^0.1.2",
 		"webp-loader": "^0.6.0",
 		"webpack-cli": "^4.5.0"
