--- a/package.json
+++ b/package.json
@@ -44,11 +44,12 @@
 		"vuepress": "^1.8.0",
 		"vuepress-plugin-disqus": "^0.2.0",
 		"vuepress-plugin-google-gtag": "^1.0.1",
-		"vuepress-plugin-seo": "^0.1.2",
+		"vuepress-plugin-seo": "^0.2.0",
 		"webp-loader": "^0.6.0",
 		"webpack-cli": "^4.5.0"
 	},
 	"dependencies": {
+		"vue-router": "~3.1.3",
 		"@ashwamegh/vue-link-preview": "^0.2.5",
 		"@vuepress/plugin-last-updated": "^1.9.7",
 		"vue-cookies": "^1.7.0",
