--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "ahmednagi.com",
 	"author": "Ahmed Nagi",
 	"description": "Personal website and blog",
-	"version": "0.2.0",
+	"version": "1.4.0",
 	"license": "MIT",
 	"repository": {
 		"type": "git",
@@ -44,15 +44,15 @@
 		"vuepress": "^1.8.0",
 		"vuepress-plugin-disqus": "^0.2.0",
 		"vuepress-plugin-google-gtag": "^1.0.1",
-		"vuepress-plugin-seo": "^0.2.0",
+		"vuepress-plugin-seo": "0.1.4",
 		"webp-loader": "^0.6.0",
 		"webpack-cli": "^4.5.0"
 	},
 	"dependencies": {
-		"vue-router": "~3.1.3",
 		"@ashwamegh/vue-link-preview": "^0.2.5",
 		"@vuepress/plugin-last-updated": "^1.9.7",
 		"vue-cookies": "^1.7.0",
-		"vue-i18n": "^8.24.3"
+		"vue-i18n": "^8.24.3",
+		"vue-router": "~3.1.3"
 	}
 }
