--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		"@vuepress/plugin-last-updated": "^1.9.7",
 		"vue-cookies": "^1.7.0",
 		"vue-i18n": "^8.24.3",
-		"vue-router": "~3.1.3"
+		"vue-router": "~3.1.3",
+		"vuepress-plugin-img-lazy": "^1.0.4"
 	}
 }
