--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 		"@vuepress/plugin-blog": "^1.9.4",
 		"@vuepress/plugin-google-analytics": "^1.8.0",
 		"@vuepress/plugin-pwa": "^1.8.0",
-		"autoprefixer": "9.0.0",
+		"autoprefixer": "^9.8.6",
 		"image-minimizer-webpack-plugin": "1.0.0",
 		"imagemin-gifsicle": "^7.0.0",
 		"imagemin-jpegtran": "^7.0.0",
@@ -35,10 +35,13 @@
 		"img-optimize-loader": "^1.0.7",
 		"moment": "^2.24.0",
 		"multi-loader": "^0.1.0",
-		"postcss": "^8.2.4",
+		"postcss": "^8.4.12",
+		"postcss-cli": "^9.1.0",
+		"postcss-import": "^12",
+		"postcss-loader": "^6.2.1",
 		"svg-inline-loader": "^0.8.0",
 		"svg-url-loader": "^7.1.1",
-		"tailwindcss": "^2.0.2",
+		"tailwindcss": "^3.0.23",
 		"tailwindcss-dir": "^4.0.0",
 		"tailwindcss-plugins": "^0.3.0",
 		"vuepress": "^1.8.0",
@@ -47,7 +50,8 @@
 		"vuepress-plugin-google-gtag": "^1.0.1",
 		"vuepress-plugin-seo": "0.1.4",
 		"webp-loader": "^0.6.0",
-		"webpack-cli": "^4.5.0"
+		"webpack": "^5.72.0",
+		"webpack-cli": "^4.9.2"
 	},
 	"dependencies": {
 		"@ashwamegh/vue-link-preview": "^0.2.5",
