--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
 		"vuepress-plugin-google-gtag": "^1.0.1",
 		"vuepress-plugin-seo": "0.1.4",
 		"webp-loader": "^0.6.0",
-		"webpack": "^5.72.0",
+		"webpack": "^4",
 		"webpack-cli": "^4.9.2"
 	},
 	"dependencies": {
@@ -59,6 +59,7 @@
 		"vue-cookies": "^1.7.0",
 		"vue-i18n": "^8.24.3",
 		"vue-router": "~3.1.3",
-		"vuepress-plugin-img-lazy": "^1.0.4"
+		"vuepress-plugin-img-lazy": "^1.0.4",
+		"vuepress-plugin-robots": "^1.0.1"
 	}
 }
